; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_emc2103.c_read_fan_from_i2c.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_emc2103.c_read_fan_from_i2c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2c_client*, i32*, i32, i32)* @read_fan_from_i2c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_fan_from_i2c(%struct.i2c_client* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i64 @read_u8_from_i2c(%struct.i2c_client* %11, i32 %12, i32* %9)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  br label %29

16:                                               ; preds = %4
  %17 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i64 @read_u8_from_i2c(%struct.i2c_client* %17, i32 %18, i32* %10)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  br label %29

22:                                               ; preds = %16
  %23 = load i32, i32* %9, align 4
  %24 = shl i32 %23, 5
  %25 = load i32, i32* %10, align 4
  %26 = ashr i32 %25, 3
  %27 = or i32 %24, %26
  %28 = load i32*, i32** %6, align 8
  store i32 %27, i32* %28, align 4
  br label %29

29:                                               ; preds = %22, %21, %15
  ret void
}

declare dso_local i64 @read_u8_from_i2c(%struct.i2c_client*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
